WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123113
RenderScrollbarPart doesn't need styleWillChange().
https://bugs.webkit.org/show_bug.cgi?id=123113
Summary
RenderScrollbarPart doesn't need styleWillChange().
Andreas Kling
Reported
2013-10-21 12:23:37 PDT
RenderScrollbarPart doesn't need styleWillChange().
Attachments
Patch
(1.89 KB, patch)
2013-10-21 12:26 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-10-21 12:26:58 PDT
Created
attachment 214763
[details]
Patch
WebKit Commit Bot
Comment 2
2013-10-21 13:08:57 PDT
Comment on
attachment 214763
[details]
Patch Clearing flags on attachment: 214763 Committed
r157726
: <
http://trac.webkit.org/changeset/157726
>
WebKit Commit Bot
Comment 3
2013-10-21 13:08:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug