RenderScrollbarPart doesn't need styleWillChange(). <https://webkit.org/b/123113>

We will call setInline(false) in styleDidChange(), there's no need
to override styleWillChange() just to do it twice.

Reviewed by Darin Adler.


Canonical link: https://commits.webkit.org/141187@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157726 268f45cc-cd09-0410-ab3c-d52691b4dbfc